<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">S&amp;B</string>

    <!-- Strings to related to menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Поиск объявлений</string>
    <string name="my_ads">Мои объявления</string>
    <string name="add_ad">Подать объявление</string>
    <string name="account">Настройки аккаунта</string>
    <string name="nav_header_desc"/>

    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="title_activity_login">Войти</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Некоректный логин</string>
    <string name="error_invalid_password">Слишком короткий пароль</string>
    <string name="error_incorrect_password">Некорректный пароль</string>
    <string name="error_field_required">Поле должно быть заполнено</string>

    <!-- Strings related to registration -->
    <string name="registration">Регистрация</string>
    <string name="email_registration">Email</string>
    <string name="last_name_registration">Фамилия</string>
    <string name="first_name_registration">Имя</string>
    <string name="phone_number_registration">Номер телефона</string>
    <string name="about_registration">Информация о себе</string>
    <string name="button_registration">Зарегистрироваться</string>
    <string name="title_registration">Регистрация</string>
    <string name="entry">Войти</string>
    <string name="to_registration">Зарегистрироваться</string>
    <string name="repeat_password_registration">Повторите пароль</string>
    <string name="error_same_password">Пароли не совпадают</string>

    <!-- Strings related to add ad -->
    <string name="title_add">Подать объявление</string>
    <string name="title_add_ad">Название</string>
    <string name="title_ad_add">Название объявления</string>
    <string name="about_ad_add">Описание</string>
    <string name="price_ad_add">Стоимость</string>
    <string name="city_ad_add">Город</string>
    <string name="password_registration">Пароль</string>
    <string name="add_ad_photo">Добавить фото</string>
    <string name="ad_was_added">Объявление добавлено!</string>
    <string name="exit">Выйти</string>
    <string name="title_settings_account">Настройки аккаунта</string>
    <string name="user_was_added">Пользователь зарегистрирован!</string>
    <string name="success_login">Вы успешно вошли в аккаунт!</string>
    <string name="exit_user">Вы успешно вышли из аккаунта!</string>
    <string name="changeUser">Изменение данных пользователя</string>
    <string name="save_change">Сохранить изменения</string>
    <string name="delete_user">Удалить аккаунт</string>
    <string name="change_user">Измнение данных</string>
    <string name="Enter_registration">Войти / Зарегистрироваться</string>
    <string name="search_hint">Поиск…</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="email">Email</string>
    <string name="tel_number">Номер телефона</string>
    <string name="about">О себе</string>
    <string name="title">Название</string>
    <string name="city">Город</string>
    <string name="description">Описание</string>
    <string name="user_agent_ad">Контактные данные</string>
    <string name="go_to_user_ad">Перейти к объявлениям пользователя</string>
    <string name="change_name">Измените имя</string>
    <string name="change_last_name">Измените фамилию</string>
    <string name="change_telephone">Измените номер телефона</string>
    <string name="change_information">Измените информацию о себе</string>
    <string name="delete_ad">Удалить объявление</string>
    <string name="ad">Объявление</string>
    <string name="ads">Объявления</string>
    <string name="user">Пользователь</string>
    <string name="change_title">Измените название</string>
    <string name="change_city">Измените город</string>
    <string name="change_description">Измените описание</string>
    <string name="change_price">Измените цену</string>
    <string name="change_ad">Изменить объявление</string>
    <string name="about_app">О приложении</string>
    <string name="version">Версия приложения: 1.0.0</string>
    <string name="support">Если у вас возникнут какие-либо проблемы в работе приложения или вы можете предложить, как
        улучшить его, то напишите нам на почту:
    </string>
    <string name="support_header">Поддержка</string>
    <string name="web"> https://sb-service.herokuapp.com</string>
    <string name="about_text">Данное клиентское приложение для ОС Android предоставляет вам возможность размещать,
        искать интересующие вас объявления в сфере строительных услуг. Также вы можете посетить наш сайт:
    </string>
    <string name="settings">Настройки</string>
    <string name="author">© Anton Kirichenkov</string>
    <string name="author_email">aKirichenkov99@gmail.com</string>
</resources>
