...
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/darkGrey"/>
            <TextView
                    android:id="@+id/title_ad_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_ad"
                    android:drawableEnd="@drawable/ic_change_user"
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="20dp"
...
